[REFACTOR] resource disk 제거 및 주석 수정