@@ -1,7 +1,6 @@
 package com.xiilab.modulek8s.workload.vo;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -38,7 +37,6 @@ public class BatchJobVO extends WorkloadVO {
 	private List<JobEnvVO> envs;        //env 정의
 	private List<JobPortVO> ports;        //port 정의
 	private String command;        // 워크로드 명령
-	private String jobName;
 
 	@Override
 	public Job createResource() {
@@ -51,9 +49,8 @@ public class BatchJobVO extends WorkloadVO {
 	// 메타데이터 정의
 	@Override
 	public ObjectMeta createMeta() {
-		jobName = getUniqueResourceName();
 		return new ObjectMetaBuilder()
-			.withName(jobName)
+			.withName(getUniqueResourceName())
 			.withNamespace(workspace)
 			.withAnnotations(
 				Map.of(
@@ -76,8 +73,7 @@ public class BatchJobVO extends WorkloadVO {
 
 		map.put(LabelField.CREATOR.getField(), getCreator());
 		map.put(LabelField.CONTROL_BY.getField(), "astra");
-		map.put(LabelField.APP.getField(), jobName);
-		map.put(LabelField.JOB_NAME.getField(), jobName);
+		map.put(LabelField.APP.getField(), getUniqueResourceName());
 		this.volumes.forEach(volume -> map.put(volume.name(), "true"));
 
 		return map;
@@ -87,10 +83,10 @@ public class BatchJobVO extends WorkloadVO {
 	@Override
 	public JobSpec createSpec() {
 		return new JobSpecBuilder()
-			// .withNewSelector().withMatchLabels(Map.of(LabelField.APP.getField(), jobName)).endSelector()
 			.withTtlSecondsAfterFinished(1000)
 			.withNewTemplate()
-			.withNewMetadata().withLabels(Collections.singletonMap(LabelField.APP.getField(), jobName)).endMetadata()
+			.withNewMetadata()
+			.withLabels(Map.of(LabelField.APP.getField(), getUniqueResourceName())).endMetadata()
 			.withSpec(createPodSpec())
 			.endTemplate()
 			.build();
